@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ParticleChangeForTransport.hh,v 1.5 2000-05-16 00:34:27 kurasige Exp $
+// $Id: G4ParticleChangeForTransport.hh,v 1.6 2001-02-12 07:56:32 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -18,6 +18,7 @@
 // ------------------------------------------------------------
 //   Implemented for the new scheme                 10 May. 1998  H.Kurahige
 //   Added theMaterialChange                        16 FEb. 2000  H.Kurahige
+//   Remove thePolarizationChange		    12 Feb. 2001 H.Kurashige
 //
 // Class Description
 //  This class is a concrete class for ParticleChange for transportation
@@ -74,11 +75,6 @@ class G4ParticleChangeForTransport: public G4ParticleChange
     void SetMaterialChange(G4Material* fMaterial);
     //  Get/Set the material in the touchable of the current particle.
 
-    const G4ThreeVector* GetPolarizationChange() const;
-    void SetPolarizationChange(G4double Px, G4double Py, G4double Pz);
-    void SetPolarizationChange(const G4ThreeVector& finalPoralization);
-    // Get/Set thePolarizationChange vector.
-
     G4bool GetMomentumChanged() const;
     void SetMomentumChanged(G4bool b);
 
@@ -94,8 +90,6 @@ class G4ParticleChangeForTransport: public G4ParticleChange
     //  The flag which is set if mometum is changed in this stepi
     G4Material* theMaterialChange;
      //  The material where given track currently locates
-    G4ThreeVector thePolarizationChange;
-    //  The changed (final) polarization of a given track
 };
 
 #include "G4ParticleChangeForTransport.icc"
