@@ -1,4 +1,4 @@
-$Id: History,v 1.24 2001-02-08 09:19:42 kurasige Exp $
+$Id: History,v 1.25 2001-02-12 07:56:30 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Feb 12, 01 H.Kurashige (track-V03-00-01)
+- Remove thePolarizationChange from G4ParticleChangeForTransport.hh
+
+
 Feb 07, 01 H.Kurashige (track-V03-00-00)
 - Add copy constructor to G4Track 
 
